# pinr

./: .pylint.ini  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
pinr/: __init__.py  __main__.py  model.py
pinr/templates/: fs-aseg.yml
tests/data/input/: aseg.mgz  aseg.stats
tests/data/input/dicom/: MR.1.3.12.2.1107.5.2.0.45074.2016081016110572496100229  MR.1.3.12.2.1107.5.2.0.45074.2016081016110577329000241  MR.1.3.12.2.1107.5.2.0.45074.2016081016110629571300270  MR.1.3.12.2.1107.5.2.0.45074.2016081016110642184700287  MR.1.3.12.2.1107.5.2.0.45074.2016081016110681539400311  MR.1.3.12.2.1107.5.2.0.45074.2016081016110695737600329  MR.1.3.12.2.1107.5.2.0.45074.2016081016110729579100355  MR.1.3.12.2.1107.5.2.0.45074.2016081016110772420800379  MR.1.3.12.2.1107.5.2.0.45074.2016081016110791485900393  MR.1.3.12.2.1107.5.2.0.45074.2016081016110876674100457  MR.1.3.12.2.1107.5.2.0.45074.2016081016110877437300463  MR.1.3.12.2.1107.5.2.0.45074.201608101611089886000415  MR.1.3.12.2.1107.5.2.0.45074.201608101611091476700483  MR.1.3.12.2.1107.5.2.0.45074.2016081016111030920500571  MR.1.3.12.2.1107.5.2.0.45074.2016081016111045332700591  MR.1.3.12.2.1107.5.2.0.45074.201608101611107883600543  MR.1.3.12.2.1107.5.2.0.45074.201608101611108657800549  MR.1.3.12.2.1107.5.2.0.45074.201608101611109409100555  MR.1.3.12.2.1107.5.2.0.45074.2016081016111130659500651  MR.1.3.12.2.1107.5.2.0.45074.2016081016111131707400657  MR.1.3.12.2.1107.5.2.0.45074.201608101611113744200623  MR.1.3.12.2.1107.5.2.0.45074.2016081016111191395000689  MR.1.3.12.2.1107.5.2.0.45074.2016081016111217621900715  MR.1.3.12.2.1107.5.2.0.45074.2016081016111231737000725  MR.1.3.12.2.1107.5.2.0.45074.2016081016111274583600757  MR.1.3.12.2.1107.5.2.0.45074.2016081016111278430300767  MR.1.3.12.2.1107.5.2.0.45074.2016081016111329785200793  MR.1.3.12.2.1107.5.2.0.45074.2016081016111358352500817  MR.1.3.12.2.1107.5.2.0.45074.2016081016111382469900837  MR.1.3.12.2.1107.5.2.0.45074.20160810161114251100857  MR.1.3.12.2.1107.5.2.0.45074.2016081016111461454400889  MR.1.3.12.2.1107.5.2.0.45074.2016081016111471690600899  MR.1.3.12.2.1107.5.2.0.45074.2016081016111517346800929  MR.1.3.12.2.1107.5.2.0.45074.2016081016111530837400949  MR.1.3.12.2.1107.5.2.0.45074.2016081016111583211100977  MR.1.3.12.2.1107.5.2.0.45074.2016081016111613739201007  MR.1.3.12.2.1107.5.2.0.45074.2016081016111641067601029  MR.1.3.12.2.1107.5.2.0.45074.201608101611167103300997  MR.1.3.12.2.1107.5.2.0.45074.2016081016111717835501081  MR.1.3.12.2.1107.5.2.0.45074.2016081016111754402601107  (+136 more)
tests/data/output/: aseg.fhir.json  aseg.sr.dcm
